app/src/main/java/com/example/architecture/bad/myfigurecollection/login/LoginActivity.java
package com.example.architecture.bad.myfigurecollection.login;

import android.app.Activity;

/**
 * Created by spawn on 12/12/16.
 */

public class LoginActivity extends Activity {
}
